# anti-distraction-bot

./: .gitignore  pyproject.toml
anti_distraction_bot/app/: main.py
anti_distraction_bot/app/audio/: player.py
anti_distraction_bot/app/capture/: webcam_capture.py
anti_distraction_bot/app/detection/: detect_presence.py
app/: main.py
app/audio/: player.py
app/capture/: webcam_capture.py
app/detection/: base_presence_detector.py  focus_presence_detector.py  person_presence_detector.py  yawn_presence_detector.py
app/utils/: draw_facial_landmarks.py  get_facial_landmarks.py
src/: detection.rs  main.rs  utils.rs
src/capture/: webcam_capture.rs
src/detection/: get_facial_landmarks.rs
src/utils/: draw_facial_landmarks.rs
