[tool.poetry]
name = "anti-distraction-bot"
version = "0.1.0"
description = ""
authors = ["michael.sutherland <michael.sutherland@foundry.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
opencv-python-headless = "^4.8.1.78"
simpleaudio = "^1.0.4"
dlib = "^19.24.2"
opencv-contrib-python = "^4.8.1.78"
opencv-python = "^4.8.1.78"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
